# git-to-notion

./: .envrc  .gitignore  LICENSE  action.yml  devenv.nix  package-lock.json  package.json  pyproject.toml
.github/workflows/: smoke.yaml  test.yaml
src/git_to_notion/: cli.py  processors.py  types.py
src/git_to_notion/scripts/: convert-gemoji-to-unicode.mjs
test/: test_cli.py
